syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/integrations_donate_stream";
package messages.integrations_donate_stream;

message DonateStreamResponse {
	string integration_id = 1;
}

message DonateStreamPostSecretRequest {
	string secret = 1;
}
